--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,20 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+  redis:
+    image: redis:8.0-alpine
+    ports:
+      - "127.0.0.1:6379:6379"
+    restart: unless-stopped
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
 volumes:
   mysql_data:
+  redis_data:
